Fix Main Hero after sticky header overlaping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,11 +54,12 @@ header {
 
 /* aligning the top items - logo, nav, phone and map link */
 #header-top {
-    background: url('../images/haven-hub-main-image-lady-administering-prescriptions.webp')no-repeat center center;
+
     height: 900px;
     width: 100%;
     background-size: 100%;
     animation: main-banner-animation 10s ease 0s 1 normal forwards;
+
 
 }
 
@@ -140,10 +141,23 @@ a>.nav-style>a:hover {
     font-size: 150%;
     background-color: rgba(0, 0, 0, 0.5);
     letter-spacing: 4px;
+    background: url('../images/haven-hub-main-image-lady-administering-prescriptions.webp')no-repeat center center;
+    background-size: cover;
+    margin-top: 62px;
 }
 
-.main-header-text h2 {
-    color: #FFCC00
+.main-header-text>h2 {
+    color: #FFCC00;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+    padding: 3px 6px;
+}
+
+.main-header-text>p {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+    padding: 3px 6px;
+
 }
 
 /* The animation below was generated from http://animista.net under FreeBSD License */
@@ -647,6 +661,7 @@ button:hover {
 
         .main-header-text {
             font-size: 80%;
+            margin-top: 136px;
         }
     }
 
@@ -691,8 +706,14 @@ button:hover {
     }
 
     @media screen and (max-width: 670px) {
-        #header-top {
+        /* #header-top {
             height: 400px;
+        } */
+
+        .main-header-text {
+            font-size: 70%;
+            margin-top: 136px;
+            margin-bottom: 2em;
         }
 
         .about-us-image1 {
@@ -725,9 +746,15 @@ button:hover {
 
     @media screen and (max-width: 630px) {
 
-        #header-top {
+        /* #header-top {
             height: 360px;
-        }
+        } */
+
+        /* .main-header-text {
+            font-size: 70%;
+            margin-top: 136px;
+            margin-bottom: 2em;
+        } */
 
         #about-us {
             font-family: Arial, Helvetica, sans-serif;
@@ -796,6 +823,13 @@ button:hover {
                 height: 250px;
                 background: url('../images/haven-hub-main-image-lady-administering-prescriptions-mobile.webp')no-repeat center center;
                 overflow: hidden;
+                margin-top: 136px;
+            }
+
+            .main-header-text>h2,
+            .main-header-text>a,
+            .main-header-text>p {
+                display: none;
             }
 
             .about-us-subtitle {
@@ -841,6 +875,7 @@ button:hover {
             height: 200px;
             background: url('../images/haven-hub-main-image-lady-administering-prescriptions-mobile.webp')no-repeat center center;
             overflow: hidden;
+            background-size: cover;
         }
 
         .about-us-subtitle {
@@ -883,8 +918,10 @@ button:hover {
             font-size: 50%;
             letter-spacing: 1px;
             height: 200px;
-            background: url('../images/haven-hub-main-image-lady-administering-prescriptions-mobile-360px.webp')no-repeat center center;
+            background: url('../images/haven-hub-main-image-lady-administering-prescriptions-mobile-2.webp')no-repeat center center;
             width: 360px;
+            margin-top: 130px;
+            background-size: cover;
         }
 
         .nav-style>a {
